--- a/portfolio.html
+++ b/portfolio.html
@@ -394,24 +394,23 @@
 
 
                 <!-- kkk makeup -->
-                <div class="row justify-content-between align-items-center">
-                    <div class="col-xl-6 mil-mb-60">
 
+                <div class="row flex-sm-row-reverse justify-content-between align-items-center">
+                    <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
                             <img src="img/images/kkk_makeup.avif" alt="KKK Makeup Studio Project">
                         </div>
-
                     </div>
                     <div class="col-xl-5 mil-mb-60">
-
                         <span class="mil-suptitle mil-suptitle-2 mil-mb-30">Empowering beauty brands with modern digital cards and online presence.</span>
                         <h3 class="mil-mb-30">KKK Makeup Studio</h3>
                         <a href="project14.html" class="mil-button-with-label">
                             <div class="mil-button mil-border mil-icon-button"><span><i class="fas fa-plus"></i></span></div><span class="mil-dark">See More</span>
                         </a>
-
                     </div>
                 </div>
+
+
 
 
                 <!-- rn builders -->
@@ -436,24 +435,22 @@
 
 
                 <!-- lexip automation -->
-                <div class="row justify-content-between align-items-center">
+
+                <div class="row flex-sm-row-reverse justify-content-between align-items-center">
                     <div class="col-xl-6 mil-mb-60">
-
                         <div class="mil-project-cover">
-                            <img src="img/images/lexip_automation.avif" alt="Lexip Automation Industrial Automation Project">
+                            <img src="img/images/lexip_automation.avif" alt="Lexip Automation">
                         </div>
-
                     </div>
                     <div class="col-xl-5 mil-mb-60">
-
                         <span class="mil-suptitle mil-suptitle-2 mil-mb-30">Delivering automation excellence with a modern digital identity and intuitive website experience.</span>
                         <h3 class="mil-mb-30">Lexip Automation</h3>
                         <a href="project16.html" class="mil-button-with-label">
                             <div class="mil-button mil-border mil-icon-button"><span><i class="fas fa-plus"></i></span></div><span class="mil-dark">See More</span>
                         </a>
-
                     </div>
                 </div>
+
 
 
                 <!-- yg beauty world -->
@@ -477,7 +474,21 @@
                 </div>
 
 
-
+                
+                <div class="row flex-sm-row-reverse justify-content-between align-items-center">
+                    <div class="col-xl-6 mil-mb-60">
+                        <div class="mil-project-cover">
+                            <img src="img/images/lexip_automation.avif" alt="Lexip Automation">
+                        </div>
+                    </div>
+                    <div class="col-xl-5 mil-mb-60">
+                        <span class="mil-suptitle mil-suptitle-2 mil-mb-30">Delivering automation excellence with a modern digital identity and intuitive website experience.</span>
+                        <h3 class="mil-mb-30">Lexip Automation</h3>
+                        <a href="project16.html" class="mil-button-with-label">
+                            <div class="mil-button mil-border mil-icon-button"><span><i class="fas fa-plus"></i></span></div><span class="mil-dark">See More</span>
+                        </a>
+                    </div>
+                </div>
 
                 
 
