--- a/project16.html
+++ b/project16.html
@@ -270,7 +270,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="img/images/lexip-automation-preview.avif" alt="Lexip Automation Digital Profile Preview">
+                            <img src="img/images/lexip2.avif" alt="Lexip Automation Digital Profile Preview">
                         </div>
                     </div>
                 </div>
@@ -311,7 +311,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="img/images/lexip-automation-results.avif" alt="Lexip Automation Digital Profile Results">
+                            <img src="img/images/lexip3.avif" alt="Lexip Automation Digital Profile Results">
                         </div>
                     </div>
                 </div>
