--- a/project22.html
+++ b/project22.html
@@ -120,7 +120,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                     </ul>
-                    <h1 class="mil-uppercase">Logo Design for Queen Paradise</h1>
+                    <h1 class="mil-uppercase">Poster Design for GL Sri Gokul Granite</h1>
                 </div>
             </div>
         </div>
