--- a/portfolio.html
+++ b/portfolio.html
@@ -507,6 +507,21 @@
                 </div>
 
 
+                <!-- GL Sri Gokul Granite -->
+                <div class="row flex-sm-row-reverse justify-content-between align-items-center">
+                    <div class="col-xl-6 mil-mb-60">
+                        <div class="mil-project-cover">
+                            <img src="img/images/gl_sri_gokul_granite_poster.avif" alt="GL Sri Gokul Granite Poster">
+                        </div>
+                    </div>
+                    <div class="col-xl-5 mil-mb-60">
+                        <span class="mil-suptitle mil-suptitle-2 mil-mb-30">Crafting a bold and impactful poster design that showcases GL Sri Gokul Granite’s strength and elegance.</span>
+                        <h3 class="mil-mb-30">GL Sri Gokul Granite Poster Design</h3>
+                        <a href="project22.html" class="mil-button-with-label">
+                            <div class="mil-button mil-border mil-icon-button"><span><i class="fas fa-plus"></i></span></div><span class="mil-dark">See More</span>
+                        </a>
+                    </div>
+                </div>
 
 
 
