--- a/project23.html
+++ b/project23.html
@@ -120,7 +120,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                     </ul>
-                    <h1 class="mil-uppercase">Poster Design for GL Sri Gokul Granite</h1>
+                    <h1 class="mil-uppercase">Logo Design for Sadhana Engineering Works</h1>
                 </div>
             </div>
         </div>
@@ -140,16 +140,16 @@
                             <h5 class="mil-list-title mil-mb-30">Project Info</h5>
 
                             <p class="mil-mb-10">Client</p>
-                            <h6 class="mil-mb-15">GL Sri Gokul Granite</h6>
+                            <h6 class="mil-mb-15">Sadhana Engineering Works</h6>
                             <div class="mil-divider mil-divider-left mil-mb-30"></div>
                             <p class="mil-mb-10">Service</p>
-                            <h6 class="mil-mb-15">Poster Design & Branding</h6>
+                            <h6 class="mil-mb-15">Logo Design & Branding</h6>
                             <div class="mil-divider mil-divider-left mil-mb-30"></div>
                             <p class="mil-mb-10">Industry</p>
-                            <h6 class="mil-mb-15">Granite & Construction Materials</h6>
+                            <h6 class="mil-mb-15">Mechanical & Industrial Engineering</h6>
                             <div class="mil-divider mil-divider-left mil-mb-30"></div>
                             <p class="mil-mb-10">Tools Used</p>
-                            <h6>Adobe Photoshop, Illustrator, Branding Suite</h6>
+                            <h6>Adobe Illustrator, Photoshop, Logo Grid System</h6>
 
                         </div>
 
@@ -159,12 +159,12 @@
                         <h1 class="mil-list-title mil-mb-30">Project Overview</h1>
                         <h3 class="mil-mb-30">Challenge</h3>
                         <p class="mil-mb-60">
-                            GL Sri Gokul Granite required a compelling poster that could effectively showcase their premium granite offerings while maintaining a bold and trustworthy visual identity. The challenge was to balance industrial strength with professional elegance and draw the viewer’s attention.
+                            Sadhana Engineering Works needed a distinctive logo that captured their technical precision, industrial strength, and trusted reputation. The challenge was to create a modern and timeless identity that stands out in the engineering sector while remaining minimal and memorable.
                         </p>
 
                         <h3 class="mil-mb-30">Our Solution</h3>
                         <p class="mil-mb-60">
-                            We designed a powerful poster using a rich color palette and high-contrast visuals to reflect the strength and quality of their granite products. The layout emphasizes key offerings and brand values, ensuring visual appeal across both digital and print formats.
+                            We crafted a bold, geometric logo using structured lines and mechanical symmetry to symbolize engineering excellence. The typography and icon blend professionalism with simplicity, creating a visual identity that works seamlessly across branding materials — from tools to digital platforms.
                         </p>
 
                         <div class="row">
@@ -173,19 +173,19 @@
                                 <ul class="mil-check-icon-list mil-mb-15">
                                     <li>
                                         <img src="https://navipromotions.in/img/icons/sm/12.svg" alt="icon">
-                                        <span class="mil-dark">Impactful poster design that showcases product durability and aesthetic appeal.</span>
+                                        <span class="mil-dark">Strong, minimal logo reflecting technical precision and reliability.</span>
                                     </li>
                                     <li>
                                         <img src="https://navipromotions.in/img/icons/sm/12.svg" alt="icon">
-                                        <span class="mil-dark">Professional layout for clear communication of services and contact details.</span>
+                                        <span class="mil-dark">Icon-based concept that communicates industry focus at a glance.</span>
                                     </li>
                                     <li>
                                         <img src="https://navipromotions.in/img/icons/sm/12.svg" alt="icon">
-                                        <span class="mil-dark">Use of granite textures and colors to align with the brand’s core material.</span>
+                                        <span class="mil-dark">Clean typography suitable for print, signage, and web.</span>
                                     </li>
                                     <li>
                                         <img src="https://navipromotions.in/img/icons/sm/12.svg" alt="icon">
-                                        <span class="mil-dark">Design ready for high-resolution print with precision and clarity.</span>
+                                        <span class="mil-dark">Color palette chosen to convey trust, precision, and innovation.</span>
                                     </li>
                                 </ul>
 
@@ -195,15 +195,15 @@
                                 <ul class="mil-check-icon-list">
                                     <li>
                                         <img src="https://navipromotions.in/img/icons/sm/12.svg" alt="icon">
-                                        <span class="mil-dark">Color scheme that reflects strength, trust, and quality.</span>
+                                        <span class="mil-dark">Designed with scalability in mind for all formats and sizes.</span>
                                     </li>
                                     <li>
                                         <img src="https://navipromotions.in/img/icons/sm/12.svg" alt="icon">
-                                        <span class="mil-dark">Adaptable design suitable for billboards, social media, and handouts.</span>
+                                        <span class="mil-dark">Incorporates industrial symbolism without clutter or complexity.</span>
                                     </li>
                                     <li>
                                         <img src="https://navipromotions.in/img/icons/sm/12.svg" alt="icon">
-                                        <span class="mil-dark">Client-centric approach with iterative feedback integration.</span>
+                                        <span class="mil-dark">Collaborative design process with multiple iterations and feedback loops.</span>
                                     </li>
                                 </ul>
 
@@ -216,6 +216,7 @@
             </div>
         </section> 
         <!-- project end -->
+
 
 
 
@@ -237,38 +238,38 @@
 
                         <h3 class="mil-mb-30">Our Approach</h3>
                         <p class="mil-mb-30">
-                            For GL Sri Gokul Granite, our objective was to create a striking poster design that reflects the strength, elegance, and premium quality of their granite products. We focused on a bold, modern aesthetic with clean visuals to showcase the durability and natural beauty their brand stands for.
+                            For Sadhana Engineering Works, our goal was to design a bold and precise logo that mirrors the brand’s industrial strength, innovation, and reliability. We focused on a clean, geometric design that reflects engineering accuracy while remaining professional and versatile.
                         </p>
 
                         <div class="mil-icon-box-head mil-long mil-mb-15">
                             <div class="mil-icon-frame mil-icon-frame-sm">
                                 <img src="https://navipromotions.in/img/icons/sm/3.svg" alt="icon">
                             </div>
-                            <p class="mil-dark">Visually strong and appealing design that captures attention instantly.</p>
+                            <p class="mil-dark">Clean and structured logo design representing engineering precision.</p>
                         </div>
                         <div class="mil-icon-box-head mil-long mil-mb-15">
                             <div class="mil-icon-frame mil-icon-frame-sm">
                                 <img src="https://navipromotions.in/img/icons/sm/2.svg" alt="icon">
                             </div>
-                            <p class="mil-dark">Balanced use of bold typography and granite textures for brand identity.</p>
+                            <p class="mil-dark">Balanced use of shapes and typography to build a strong brand identity.</p>
                         </div>
                         <div class="mil-icon-box-head mil-long mil-mb-15">
                             <div class="mil-icon-frame mil-icon-frame-sm">
                                 <img src="https://navipromotions.in/img/icons/sm/5.svg" alt="icon">
                             </div>
-                            <p class="mil-dark">Poster optimized for print with high clarity and premium finish.</p>
+                            <p class="mil-dark">Designed using scalable formats for all print and digital applications.</p>
                         </div>
                         <div class="mil-icon-box-head mil-long mil-mb-15">
                             <div class="mil-icon-frame mil-icon-frame-sm">
                                 <img src="https://navipromotions.in/img/icons/sm/6.svg" alt="icon">
                             </div>
-                            <p class="mil-dark">Creative design that highlights product quality and brand prestige.</p>
+                            <p class="mil-dark">Color scheme selected to reflect trust, innovation, and durability.</p>
                         </div>
 
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="img/images/gokulgranite-poster-preview.avif" alt="GL Sri Gokul Granite Poster Preview">
+                            <img src="img/images/sadhana-engineering-logo-preview.avif" alt="Sadhana Engineering Works Logo Preview">
                         </div>
                     </div>
                 </div>
@@ -278,44 +279,45 @@
 
                         <h3 class="mil-mb-30">Results & Impact</h3>
                         <p class="mil-mb-30">
-                            The poster design significantly elevated GL Sri Gokul Granite’s brand appeal. It provided a professional and premium visual identity that resonated with clients and boosted their marketing presence in both digital and physical spaces.
+                            The final logo gave Sadhana Engineering Works a professional and memorable brand identity. It improved visual consistency across platforms and positioned the company as a modern and dependable player in the mechanical and industrial sector.
                         </p>
 
                         <div class="mil-icon-box-head mil-long mil-mb-15">
                             <div class="mil-icon-frame mil-icon-frame-sm">
                                 <img src="https://navipromotions.in/img/icons/sm/7.svg" alt="icon">
                             </div>
-                            <p class="mil-dark">Stronger brand recall through high-impact visual design.</p>
+                            <p class="mil-dark">Improved brand recognition through a distinctive and clean logo.</p>
                         </div>
                         <div class="mil-icon-box-head mil-long mil-mb-15">
                             <div class="mil-icon-frame mil-icon-frame-sm">
                                 <img src="https://navipromotions.in/img/icons/sm/4.svg" alt="icon">
                             </div>
-                            <p class="mil-dark">Improved brand presence in showrooms and trade events.</p>
+                            <p class="mil-dark">Consistent branding across marketing materials and signage.</p>
                         </div>
                         <div class="mil-icon-box-head mil-long mil-mb-15">
                             <div class="mil-icon-frame mil-icon-frame-sm">
                                 <img src="https://navipromotions.in/img/icons/sm/8.svg" alt="icon">
                             </div>
-                            <p class="mil-dark">Adaptable design for future campaigns and promotional materials.</p>
+                            <p class="mil-dark">Versatile usage for print, digital, uniforms, and equipment.</p>
                         </div>
                         <div class="mil-icon-box-head mil-long mil-mb-15">
                             <div class="mil-icon-frame mil-icon-frame-sm">
                                 <img src="https://navipromotions.in/img/icons/sm/9.svg" alt="icon">
                             </div>
-                            <p class="mil-dark">Enhanced professional image that aligns with their market leadership.</p>
+                            <p class="mil-dark">Strengthened brand identity aligned with industrial values.</p>
                         </div>
 
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="img/images/gokulgranite-poster-impact.avif" alt="GL Sri Gokul Granite Poster Impact">
+                            <img src="img/images/sadhana-engineering-logo-impact.avif" alt="Sadhana Engineering Works Logo Impact">
                         </div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- project end -->
+
 
 
 
@@ -338,7 +340,7 @@
                 <div class="row align-items-end mil-mb-90">
                     <div class="col-xl-6">
                         <h2 class="mil-mb-30">Conclusion</h2>
-                        <p>Our collaboration with GL Sri Gokul Granite led to the creation of a visually striking and high-impact poster design that powerfully represents their expertise in premium granite solutions. This design enhanced their promotional presence, captured customer attention, and delivered their brand message with clarity and style.</p>
+                        <p>Our collaboration with Sadhana Engineering Works resulted in a dynamic and professional logo design that perfectly captures the company's precision, trustworthiness, and engineering excellence. The new logo reinforces their brand identity and serves as a solid foundation for all their visual communications moving forward.</p>
                     </div>
                 </div>
 
@@ -349,8 +351,8 @@
                                 <img src="https://navipromotions.in/img/icons/md/1.svg" alt="icon">
                             </div>
                             <div class="mil-box-text">
-                                <h4 class="mil-mb-30">Bold and Elegant Design</h4>
-                                <p>The poster features a modern layout and luxurious visuals that reflect the quality and strength of GL Sri Gokul Granite’s offerings.</p>
+                                <h4 class="mil-mb-30">Distinct Brand Identity</h4>
+                                <p>The logo establishes a unique and recognizable identity that reflects Sadhana Engineering Works’ commitment to quality and innovation.</p>
                             </div>
                         </div>
                     </div>
@@ -360,8 +362,8 @@
                                 <img src="https://navipromotions.in/img/icons/md/2.svg" alt="icon">
                             </div>
                             <div class="mil-box-text">
-                                <h4 class="mil-mb-30">Strong Market Appeal</h4>
-                                <p>The visually appealing design helps the brand attract attention, build recognition, and connect better with target audiences.</p>
+                                <h4 class="mil-mb-30">Professional & Modern Look</h4>
+                                <p>The design combines technical precision with aesthetic appeal, aligning with the brand’s engineering background and future vision.</p>
                             </div>
                         </div>
                     </div>
@@ -371,8 +373,8 @@
                                 <img src="https://navipromotions.in/img/icons/md/3.svg" alt="icon">
                             </div>
                             <div class="mil-box-text">
-                                <h4 class="mil-mb-30">Consistent Brand Identity</h4>
-                                <p>The poster complements GL Sri Gokul Granite’s branding across various platforms, ensuring a professional and unified image.</p>
+                                <h4 class="mil-mb-30">Versatile Usage</h4>
+                                <p>The logo is designed for flexibility—working seamlessly across print, digital, and merchandise platforms, ensuring long-term consistency.</p>
                             </div>
                         </div>
                     </div>
@@ -380,6 +382,7 @@
             </div>
         </section>
         <!-- conclusion end -->
+
 
 
 
