--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
                                         <!-- <h6>by: <span class="mil-accent">Roy Bricks</span></h6> -->
                                     </div>
                                     <div class="mil-card-text">
-                                        <p>Banner Design </p>
+                                        <p>Digital and Visiting Card , Banner and Poster Design </p>
                                     </div>
                                 </div>
                             </a>
@@ -758,25 +758,7 @@
 
                         </div>
 
-                        <div class="swiper-slide">
-
-                            <a href="project11.html" class="mil-card">
-                                <div class="mil-cover-frame">
-                                    <img src="img/images/shobi11.jpg" alt="project">
-                                </div>
-                                <div class="mil-description">
-                                    <div class="mil-card-title">
-                                        <h4 class="mil-mb-20">Shobi Makeover</h4>
-                                        <!-- <h6>by: <span class="mil-accent">Roy Bricks</span></h6> -->
-                                    </div>
-                                    <div class="mil-card-text">
-                                        <p>Poster Design</p>
-                                    </div>
-                                </div>
-                            </a>
-
-                        </div>
-
+                
 
                         <div class="swiper-slide">
 
@@ -798,44 +780,170 @@
                         </div>
 
 
-                        <div class="swiper-slide">
 
-                            <a href="project13.html" class="mil-card">
+                        <div class="swiper-slide">
+                            <a href="project14.html" class="mil-card">
                                 <div class="mil-cover-frame">
-                                    <img src="img/images/shobi111.avif" alt="project">
+                                    <img src="img/images/kkk1.avif" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
-                                        <h4 class="mil-mb-20">Shobi Makeover</h4>
-                                        <!-- <h6>by: <span class="mil-accent">Roy Bricks</span></h6> -->
+                                        <h4 class="mil-mb-20">KKK Makeup Studio</h4>
                                     </div>
                                     <div class="mil-card-text">
-                                        <p>Digital Card</p>
+                                        <p>Digital and Visiting Card , Logo Design</p>
                                     </div>
                                 </div>
                             </a>
+                        </div>
 
+                        <div class="swiper-slide">
+                            <a href="project15.html" class="mil-card">
+                                <div class="mil-cover-frame">
+                                    <img src="img/images/rn1.avif" alt="project">
+                                </div>
+                                <div class="mil-description">
+                                    <div class="mil-card-title">
+                                        <h4 class="mil-mb-20">RN Builders</h4>
+                                    </div>
+                                    <div class="mil-card-text">
+                                        <p>Web Application Development</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <a href="project16.html" class="mil-card">
+                                <div class="mil-cover-frame">
+                                    <img src="img/images/lexip1.avif" alt="project">
+                                </div>
+                                <div class="mil-description">
+                                    <div class="mil-card-title">
+                                        <h4 class="mil-mb-20">Lexip Automation</h4>
+                                    </div>
+                                    <div class="mil-card-text">
+                                        <p>Web Application Development</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <a href="project17.html" class="mil-card">
+                                <div class="mil-cover-frame">
+                                    <img src="img/images/yg1.avif" alt="project">
+                                </div>
+                                <div class="mil-description">
+                                    <div class="mil-card-title">
+                                        <h4 class="mil-mb-20">YG Beauty World</h4>
+                                    </div>
+                                    <div class="mil-card-text">
+                                        <p>Digital Card Development</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <a href="project18.html" class="mil-card">
+                                <div class="mil-cover-frame">
+                                    <img src="img/images/appar1.avif" alt="project">
+                                </div>
+                                <div class="mil-description">
+                                    <div class="mil-card-title">
+                                        <h4 class="mil-mb-20">Appar Guru</h4>
+                                    </div>
+                                    <div class="mil-card-text">
+                                        <p>Poster and Banner Design</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <a href="project19.html" class="mil-card">
+                                <div class="mil-cover-frame">
+                                    <img src="img/images/lg1.avif" alt="project">
+                                </div>
+                                <div class="mil-description">
+                                    <div class="mil-card-title">
+                                        <h4 class="mil-mb-20">LG Best Shop</h4>
+                                    </div>
+                                    <div class="mil-card-text">
+                                        <p>Poster and Banner Design</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <a href="project20.html" class="mil-card">
+                                <div class="mil-cover-frame">
+                                    <img src="img/images/queen1.avif" alt="project">
+                                </div>
+                                <div class="mil-description">
+                                    <div class="mil-card-title">
+                                        <h4 class="mil-mb-20">Queen Paradise</h4>
+                                    </div>
+                                    <div class="mil-card-text">
+                                        <p>Logo Design</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <a href="project21.html" class="mil-card">
+                                <div class="mil-cover-frame">
+                                    <img src="img/images/nys1.avif" alt="project">
+                                </div>
+                                <div class="mil-description">
+                                    <div class="mil-card-title">
+                                        <h4 class="mil-mb-20">NY'S Garden</h4>
+                                    </div>
+                                    <div class="mil-card-text">
+                                        <p>Visiting Card Design</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <a href="project22.html" class="mil-card">
+                                <div class="mil-cover-frame">
+                                    <img src="img/images/gl1.avif" alt="project">
+                                </div>
+                                <div class="mil-description">
+                                    <div class="mil-card-title">
+                                        <h4 class="mil-mb-20">GL Sri Gokul Granite</h4>
+                                    </div>
+                                    <div class="mil-card-text">
+                                        <p>Poster and Banner Design</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <a href="project23.html" class="mil-card">
+                                <div class="mil-cover-frame">
+                                    <img src="img/images/sadhana1.avif" alt="project">
+                                </div>
+                                <div class="mil-description">
+                                    <div class="mil-card-title">
+                                        <h4 class="mil-mb-20">Sadhana Engineering Works</h4>
+                                    </div>
+                                    <div class="mil-card-text">
+                                        <p>Logo Design</p>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
 
 
-                        <!-- <div class="swiper-slide">
 
-                            <a href="project.html" class="mil-card">
-                                <div class="mil-cover-frame">
-                                    <img src="https://navipromotions.in/img/projects/4.jpg" alt="project">
-                                </div>
-                                <div class="mil-description">
-                                    <div class="mil-card-title">
-                                        <h4 class="mil-mb-20">Easy & Most Powerful Server Platform.</h4>
-                                        <h6>by: <span class="mil-accent">Nguta Ithya</span></h6>
-                                    </div>
-                                    <div class="mil-card-text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                    </div>
-                                </div>
-                            </a>
-
-                        </div> -->
+                        
                     </div>
                 </div>
                 <div class="row align-items-center">
