--- a/portfolio.html
+++ b/portfolio.html
@@ -448,7 +448,7 @@
                 <div class="row flex-sm-row-reverse justify-content-between align-items-center">
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="img/images/appar_guru_posters.avif" alt="Appar Guru Posters">
+                            <img src="img/images/appar1.avif" alt="Appar Guru Posters">
                         </div>
                     </div>
                     <div class="col-xl-5 mil-mb-60">
@@ -467,7 +467,7 @@
                     <div class="col-xl-6 mil-mb-60">
                 
                         <div class="mil-project-cover">
-                            <img src="img/images/lg_best_shop_posters.avif" alt="LG Best Shop Posters">
+                            <img src="img/images/lg1.avif" alt="LG Best Shop Posters">
                         </div>
                 
                     </div>
@@ -488,7 +488,7 @@
                 <div class="row flex-sm-row-reverse justify-content-between align-items-center">
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="img/images/queen_paradise_logo.avif" alt="Queen Paradise Logo">
+                            <img src="img/images/queen1.avif" alt="Queen Paradise Logo">
                         </div>
                     </div>
                     <div class="col-xl-5 mil-mb-60">
@@ -506,7 +506,7 @@
                 <div class="row justify-content-between align-items-center">
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="img/images/nys_garden_visiting_card.avif" alt="NY'S Garden Visiting Card">
+                            <img src="img/images/nys1.avif" alt="NY'S Garden Visiting Card">
                         </div>
                     </div>
                     <div class="col-xl-5 mil-mb-60">
@@ -523,7 +523,7 @@
                 <div class="row flex-sm-row-reverse justify-content-between align-items-center">
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="img/images/gl_sri_gokul_granite_poster.avif" alt="GL Sri Gokul Granite Poster">
+                            <img src="img/images/gl1.avif" alt="GL Sri Gokul Granite Poster">
                         </div>
                     </div>
                     <div class="col-xl-5 mil-mb-60">
@@ -540,7 +540,7 @@
                 <div class="row justify-content-between align-items-center">
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="img/images/sadhana_engineering_logo.avif" alt="Sadhana Engineering Works Logo Design">
+                            <img src="img/images/sadhana1.avif" alt="Sadhana Engineering Works Logo Design">
                         </div>
                     </div>
                     <div class="col-xl-5 mil-mb-60">
