--- a/project20.html
+++ b/project20.html
@@ -120,7 +120,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                     </ul>
-                    <h1 class="mil-uppercase">Visiting Card for NY'S Garden</h1>
+                    <h1 class="mil-uppercase">Logo for Queen Paradise</h1>
                 </div>
             </div>
         </div>
@@ -264,7 +264,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="img/images/queenparadise-logo-preview.avif" alt="Queen Paradise Logo Preview">
+                            <img src="img/images/queen2.avif" alt="Queen Paradise Logo Preview">
                         </div>
                     </div>
                 </div>
@@ -305,7 +305,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="img/images/queenparadise-logo-impact.avif" alt="Queen Paradise Logo Results">
+                            <img src="img/images/queen3.avif" alt="Queen Paradise Logo Results">
                         </div>
                     </div>
                 </div>
