--- a/project22.html
+++ b/project22.html
@@ -268,7 +268,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="img/images/gokulgranite-poster-preview.avif" alt="GL Sri Gokul Granite Poster Preview">
+                            <img src="img/images/gl2.avif" alt="GL Sri Gokul Granite Poster Preview">
                         </div>
                     </div>
                 </div>
@@ -309,7 +309,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="img/images/gokulgranite-poster-impact.avif" alt="GL Sri Gokul Granite Poster Impact">
+                            <img src="img/images/gl3.avif" alt="GL Sri Gokul Granite Poster Impact">
                         </div>
                     </div>
                 </div>
