--- a/project18.html
+++ b/project18.html
@@ -263,7 +263,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="img/images/apprguru-promo.avif" alt="Appar Guru Promotional Poster Preview">
+                            <img src="img/images/appar2.avif" alt="Appar Guru Promotional Poster Preview">
                         </div>
                     </div>
                 </div>
@@ -304,7 +304,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="img/images/apprguru-results.avif" alt="Appar Guru Promotional Campaign Results">
+                            <img src="img/images/appar3.avif" alt="Appar Guru Promotional Campaign Results">
                         </div>
                     </div>
                 </div>
