--- a/project21.html
+++ b/project21.html
@@ -120,7 +120,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                     </ul>
-                    <h1 class="mil-uppercase">Logo Design for Queen Paradise</h1>
+                    <h1 class="mil-uppercase">Visiting Card Design for NY'S Garden</h1>
                 </div>
             </div>
         </div>
@@ -265,7 +265,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="img/images/nysgarden-visitingcard-preview.avif" alt="NY'S Garden Visiting Card Preview">
+                            <img src="img/images/nys2.avif" alt="NY'S Garden Visiting Card Preview">
                         </div>
                     </div>
                 </div>
@@ -306,7 +306,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="img/images/nysgarden-visitingcard-impact.avif" alt="NY'S Garden Visiting Card Results">
+                            <img src="img/images/nys3.avif" alt="NY'S Garden Visiting Card Results">
                         </div>
                     </div>
                 </div>
