--- a/project23.html
+++ b/project23.html
@@ -269,7 +269,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="img/images/sadhana-engineering-logo-preview.avif" alt="Sadhana Engineering Works Logo Preview">
+                            <img src="img/images/sadhana2.jpg" alt="Sadhana Engineering Works Logo Preview">
                         </div>
                     </div>
                 </div>
@@ -310,7 +310,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="img/images/sadhana-engineering-logo-impact.avif" alt="Sadhana Engineering Works Logo Impact">
+                            <img src="img/images/sadhana3.avif" alt="Sadhana Engineering Works Logo Impact">
                         </div>
                     </div>
                 </div>
